<resources>
    <string name="app_name">Dietary</string>

    <string name="fitnessAssi">Choose your Fitness guideline based on your Life Style !</string>


    <string name="warning1">
        • If you have any injury or health issue please contact your doctor before starting with this plan.\n\n
        • Don’t rush during workout time. At beginner level, ist’s ok to take much time than the given one.\n\n
        • It’s ok to skip during workout time for any emergency.\n\n
        • In the first few weeks body pain is normal. You can check body releasing stretching, which is also provided.But if you some serious pain or injury then contact a doctor as early as possible. \n\n
        • Don’t try exercises in front of children.\n\n
        • For better results, you need to be regular with this plan along with food habits.
    </string>

    <string name="monday">
        Please first complete the Pre-Workout part then start.\n\n
        • 5 pushups / supporting pushup\n\n
        • 10 squats\n\n
        • 20 sec. Arms circles\n\n
        • 20 sec. Reverse arms circles\n\n
        • 15 crunches\n\n
        • 15 bicycles\n\n
        • 10 lunges(each leg)\n\n
        • 15 sec high knees\n\n
    </string>

    <string name="bigenear">
        An at-home Body-Weight workout routine for every day of the week.\n\n
            Leve: Bigenear\n
            Plan type: Weekly\n
            Duration: 30-40 mins\n
    </string>

    <string name="pushUp">
         1.Assume a face-down prone position on the floor.Keep your feet together.Your weight should be on your chest.\n
        • Position hands palms-down on the floor, approximately shoulder-width apart.They should be about next to your shoulders, with your elbows pointed towards your toes.\n
        • if you are on a relatively cushioned surface, such as a carpeted floor,you may also support yourself on your fists between the first and second knuckles for a greater challenge. If you are on a less forgiving surface, consider investing in some push-up grips,(they look like handles you put on the floor).\n
        • Curl your toes upward (towards your head). The balls of your feet should touch the ground.\n\n
        2. Raise yourself using your arms. At this point, your weight should be supported by your hands and the balls of your feet. Make a straight line from your head to your heels, and contract your abdominals to keep your hips from sagging. This position is called a plank, which is used for various exercises.[1] This is the beginning and the end position of a single push up.\n
    </string>

    <string name="supportingPush">
        1.Stand with feet under hips, arm’s length away from a wall.\n
        2. Plant both palms on the wall, with wrists in line with your shoulders and fingers pointed at the ceiling.\n
        3.Screw pinkies into the wall to activate lats and brace core (by preparing for a gut punch). Then, pull up on quad muscles and clench butt cheeks like you’re holding in a fart.\n
        4.Maintaining this tight AF position, inhale and bend elbows straight back until your forehead or nose nearly boinks the wall.\n
        5.Exhale as you press the wall away and return to the starting position. That’s 1 rep.\n
    </string>

    <string name="squats">
        1. Maintaining a wide stance, place your feet squarely under the bar and lift it from the rack using the legs. Keep the weight centered; do not lift from your heels or toes.\n
        2. Slowly bend your knees while keeping your torso erect. Do not lean forward. Keep your hips under the bar at all times. At the bottom of your movement, the angles of your knee joint and hip joint are nearly equal. Never relax or drop to the bottom position. Maintain constant, slow, and controlled muscle tension. Inhale as you lower.\n
        3. Slowly return to starting position while keeping your torso and back erect and hips under the bar. Exhale as you push through your heels and stand tall.\n
        4. Repeat as many times as desired for a set. Try one to three sets of six to 10 squats to start.
    </string>

    <string name="armsCircles">
        1. Stand with your feet shoulder-width apart and extend your arms parallel to the floor.\n
        2. Circle your arms forward using small controlled motions, gradually making the circles bigger until you feel a stretch in your triceps.\n
        3. Reverse the direction of the circles after about 10 seconds.\n
    </string>

    <string name="crunches">
        1. Lie down on your back. Plant your feet on the floor, hip-width apart. Bend your knees and place your arms across your chest. Contract your abs and inhale.\n
        2. Exhale and lift your upper body, keeping your head and neck relaxed.\n
        3. Inhale and return to the starting position.\n
    </string>

    <string name="bicycle">
        1. Lie on your back, lift your shoulders off the mat and raise both legs.\n
        2. Bring one knee and the opposing elbow close to each other by crunching to one side, and fully extend the other leg.\n
        3. Return to the starting position and then crunch to the opposite side.\n
        4. Repeat until the set is complete.\n
    </string>

    <string name="lunges">
        1. Maintaining a wide stance, place your feet squarely under the bar and lift it from the rack using the legs. Keep the weight centered; do not lift from your heels or toes.\n
        2. Slowly bend your knees whileStand with your feet hip-width apart, keep your back straight, your shoulders back and your abs tight.\n
        3. Take a step forward and slowly bend both knees, until your back knee is just above the floor.\n
        4. Stand back up and repeat the movement.\n
        5. Alternate legs until set is complete.\n
    </string>

    <string name="knees">
        1. Stand with your feet hip-width apart. Lift up your left knee to your chest.\n
        2. Switch to lift your right knee to your chest. Continue the movement, alternating legs and moving at a sprinting or running pace\n
    </string>

    <string name="boat_pose">Step 1: Sit the floor with your hands a little behind your hips\n
                                       and your legs straight in front of you.\n\n
                             Step 2: Lift your feet off the floor slowly so that the thigs are\n
                                       angled about 45-50 degrees relative to the floor.\n\n
                             Step 3: stretch you arms alongside the legs, parallel to each other\n
                                      and the floor.\n\n
                             Step 4: Keep the lower belly relatively flat and breathe easily.\n\n
                             Step 5: Stay this position for about 50-60 seconds.\n\n</string>
    <string name="bow_pose"> Step 1: Lie on yur stomach with your feet hip-width apart your\n
                             arms by this side of your body.\n\n
                             Step 2: Take your hands backword,fold your knees and hold ankles\n
                             with your hand.\n\n
                             Step 3: Inhale,lift up your chest off the ground and pull your legs up\n
                             and back.\n\n
                             Step 4: Look straight ahead with a smile on your face.\n\n
                             Step 5: After 20 seconds, as you exhale,gently bring yourlegs and chest\n
                             to the ground.</string>
    <string name="chair_pose">Step 1: Stand and place yur feet inner-hip width distance apart\n\n
                              Step 2: Reach yours ars overhead while palms facing each other\n\n
                              Step 3: Bend your knees so most of yours weight is in your heels.\n
                                      keep your knees over your feet.\n\n
                              Step 4: Lean forward slightly and draw your shoulder gently towards each
                                      other and away from your ears\n\n
                              Step 5: Stay in this position for about 60 seconds.</string>
    <string name="cobbler_pose">Step 1: Sit and straight your legs out\n\n
                                Step 2: Bend your knees as you pull your heels towards your pelvis.\n
                                        press the soles of your feet close together and your knees drop to\n
                                        the sides.\n\n
                                Step 3: Bring your heels as close to yours pelvis as you can.\n\n
                                Step 4: hold the big thumbs of your feet as the outer edges of your\n
                                        feet must be pressed to the floor.\n\n
                                Step 5: Stay in this position for about 60-70 seconds. </string>
    <string name="cow_pose">Step 1: Put your hands knees on the floor in a tabletop position.\n\n
                            Step 2: Make sure your wrists,elbows and shoulders are in line and\n
                                    perpendicular to the floor.\n\n
                            Step 3: Center your head in neutral position, eyes lookig at the floor.\n\n
                            Step 4: Round your spine toward the ceiling while your exhale and make sure\n
                                    everything is in position.\n\n
                            Step 5: Inhale and come back neutral position.</string>
    <string name="child_pose">Step 1: Start in a tabletop shape on your hands and knees\n\n
                              Step 2: Release the tops of your feet to the floor and bring your\n
                                      knees wider than yours hips, toes touching\n\n
                              Step 3: Lower your hips toward your heels slowly\n\n
                              Step 4: Walk your hands forward and rest your head on the floor\n\n
                              Step 5: Take several slow breaths into your belly and chest and back to\n
                                      previous position.</string>
    <string name="bridge_pose">Step 1: Lie on your back and place your feet flat on the floor.\n\n
                               Step 2: Bend your elbows 90 degrees so that your fingers are\n
                                       pointing to the ceiling.\n\n
                               Step 3: Inhale,press the back your shoulders and your feet\n
                                       into the floor and lift your hips up.\n\n
                               Step 4: Press the inner feet down actively,Lengthen your taibone\n
                                       and keep your neck neutral.\n\n
                               Step 5: Stay in this position for 50-60 seconds.</string>

    <string name="busyIntro">
        Here is the solution of your Busy Life workout problem. Go with every Yoga pose regularly and maintain 1 min counting.\n\n
        Try to continue with 3-5 repetitions. Relax and cool during Yoga.
    </string>

    <string name="selectSet">
       Please select your workout set according to your range. For any confusion click on LIVE CHAT option.\n\n
          • 1x for first 3 weeks \n\n
          • 2x for next 2 weeks\n\n
          • 3x-5x from 6th week or more\n\n

        Save your set to get Regular Reminder Notification.\n\n
    </string>
</resources>
